<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_help12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="59dp"
        android:text="@string/tv_help1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="145dp"
        android:text="@string/tv_header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="107dp"
        android:text="@string/btn_next"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back2"

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="107dp"
        android:text="@string/btn_back"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="411dp"
        android:layout_height="350dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_help12"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/timesl3"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/timesl3"
        app:layout_constraintStart_toEndOf="@+id/timesl"
        app:layout_constraintTop_toBottomOf="@+id/tv_slots" />

    <EditText
        android:id="@+id/timesl2"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/timesl2"
        app:layout_constraintStart_toEndOf="@+id/timesl3"
        app:layout_constraintTop_toTopOf="@+id/timesl3" />

    <EditText
        android:id="@+id/timesl8"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/timesl8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/timesl6"
        app:layout_constraintTop_toTopOf="@+id/timesl3" />

    <TextView
        android:id="@+id/tv_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_slots"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="454dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/timesl"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/temsl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slots" />

    <EditText
        android:id="@+id/timesl6"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/timesl5"
        app:layout_constraintStart_toEndOf="@+id/timesl2"
        app:layout_constraintTop_toTopOf="@+id/timesl3" />

</androidx.constraintlayout.widget.ConstraintLayout>